<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.96"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorieIntake"
                    android:textColor="#66FF66"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/intakeCal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="13"
                    android:textColor="#66FF66"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorieSpend"
                    android:textColor="#FF99FF"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/spentCal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="13"
                    android:textColor="#FF99FF"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="#0099CC"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/balanceCal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:textColor="#0099CC"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="#8b4513"
            android:textIsSelectable="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8b4513"
            android:textIsSelectable="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:id="@+id/pie_lay"
            android:layout_width="300dp"
            android:layout_height="300dp" >
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBar"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goIntake"
            android:text="@string/intakeButton" />

        <Button
            android:id="@+id/exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goExercise"
            android:text="@string/exerciseButton" />

        <Button
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/balanceButton" />
    </LinearLayout>

</LinearLayout>