<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.96">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodChose"
                    android:id="@+id/view2"
                    android:textColor="#297ACC"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodName"
                    android:layout_column="0"
                    android:textColor="#5CADFF"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numberIntake"
                    android:id="@+id/view1"
                    android:textColor="#297ACC"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/intakeNo"
                    android:layout_column="2"
                    android:textColor="#5CADFF"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorieIntaked"
                    android:id="@+id/view6"
                    android:textColor="#297ACC"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/intakeCalorie"
                    android:layout_column="2"
                    android:textColor="#5CADFF"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalInCalorie"
                    android:id="@+id/textView15"
                    android:textColor="#297ACC"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalInCal"
                    android:layout_column="2"
                    android:textColor="#5CADFF"
                    android:textSize="30sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/ButtonBar"
        android:orientation="horizontal">

        <TableRow>
            <Button
                android:id="@+id/intake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intakeButton"/>

            <Button
                android:id="@+id/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exerciseButton"
                android:onClick="goExercise"/>

            <Button
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/balanceButton"
                android:onClick="goBalance"/>
        </TableRow>
    </TableLayout>

</LinearLayout>